fix betking logo size on mobile (#9)

--- a/app/src/scss/custom/_custom.scss
+++ b/app/src/scss/custom/_custom.scss
@@ -349,6 +349,14 @@ img.flag{
   }
 }
 
+.app-header.navbar {
+  .navbar-brand {
+    @include media-breakpoint-down(md) {
+      width: $navbar-brand-width;
+    }
+  }
+}
+
 .sidebar{
   z-index:$zindex-sticky + 1 !important;
 }
